// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HostProfile /> if \`props.email\` is defined should render the right structure 1`] = `
<HostProfile
  avatarUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
  contactInformationHeadingText="Contact Information"
  description="We do love cats"
  email="welovecats@lodgify.com"
  emailLabel="Email"
  headingText="Your Host"
  languages={null}
  languagesLabel="Languages"
  name="Mitjons & Kira"
  phone={null}
  phoneLabel="Phone"
>
  <Grid
    areColumnsCentered={false}
    isStackable={false}
    textAlign="left"
  >
    <Grid
      centered={false}
      stackable={false}
      textAlign="left"
    >
      <div
        className="ui left aligned grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                id={null}
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  id={null}
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                    id={null}
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Your Host
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                id={null}
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  id={null}
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                    id={null}
                  >
                    <FlexContainer
                      alignContent={null}
                      alignItems="center"
                      className="avatar-container"
                      flexDirection={null}
                      flexWrap={null}
                      justifyContent={null}
                    >
                      <div
                        className="flex-container avatar-container"
                        style={
                          Object {
                            "alignContent": null,
                            "alignItems": "center",
                            "display": "flex",
                            "flexDirection": null,
                            "flexGrow": "1",
                            "flexWrap": null,
                            "height": "100%",
                            "justifyContent": null,
                          }
                        }
                      >
                        <Avatar
                          firstName="Mitjons"
                          image="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                          lastName="&"
                        >
                          <div
                            className="avatar"
                            data-testid="avatar"
                          >
                            <withLazyLoad(ResponsiveImage)
                              data-testid="avatar-image"
                              imageUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                              isCircular={true}
                              isLazyLoaded={true}
                            >
                              <LazyLoader
                                componentProps={
                                  Object {
                                    "data-testid": "avatar-image",
                                    "isCircular": true,
                                    "isLazyLoaded": true,
                                  }
                                }
                                lazyProps={
                                  Object {
                                    "imageUrl": "https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max",
                                    "srcSet": undefined,
                                  }
                                }
                              >
                                <div />
                                <ResponsiveImage
                                  data-testid="avatar-image"
                                  hasRoundedCorners={false}
                                  imageTitle="Image Title"
                                  imageUrl=""
                                  isAvatar={false}
                                  isCircular={true}
                                  isFluid={false}
                                  isLazyLoaded={true}
                                  label={null}
                                  sizes={null}
                                  srcSet={null}
                                  willFill={false}
                                >
                                  <figure
                                    alt="Image Title"
                                    className="responsive-image isCircular"
                                    data-testid="responsive-image"
                                    style={
                                      Object {
                                        "backgroundImage": "url(undefined)",
                                      }
                                    }
                                  >
                                    <Image
                                      as="img"
                                      avatar={false}
                                      circular={true}
                                      data-testid="responsive-image-img"
                                      fluid={false}
                                      onError={[Function]}
                                      onLoad={[Function]}
                                      rounded={false}
                                      sizes={null}
                                      src=""
                                      srcSet={null}
                                      title="Image Title"
                                      ui={true}
                                    >
                                      <img
                                        className="ui circular image"
                                        data-testid="responsive-image-img"
                                        onError={[Function]}
                                        onLoad={[Function]}
                                        sizes={null}
                                        src=""
                                        srcSet={null}
                                        title="Image Title"
                                      />
                                    </Image>
                                  </figure>
                                </ResponsiveImage>
                                <div />
                              </LazyLoader>
                            </withLazyLoad(ResponsiveImage)>
                          </div>
                        </Avatar>
                        <Heading
                          className={null}
                          hasMargin={true}
                          isColorInverted={false}
                          size="small"
                          textAlign={null}
                        >
                          <Header
                            as="h4"
                            className=""
                            inverted={false}
                            textAlign={null}
                          >
                            <h4
                              className="ui header"
                            >
                              Mitjons & Kira
                            </h4>
                          </Header>
                        </Heading>
                      </div>
                    </FlexContainer>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
          verticalAlign="top"
        >
          <GridRow
            textAlign="left"
            verticalAlign="top"
          >
            <div
              className="left aligned top aligned row"
            >
              <GridColumn
                computer={7}
                id={null}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={7}
                  id={null}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned seven wide computer twelve wide mobile twelve wide tablet column"
                    id={null}
                  >
                    <HTML
                      htmlString="We do love cats"
                    >
                      <div
                        className="html-container"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "We do love cats",
                          }
                        }
                      />
                    </HTML>
                  </div>
                </GridColumn>
              </GridColumn>
              <GridColumn
                computer={5}
                id={null}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={5}
                  id={null}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned five wide computer twelve wide mobile twelve wide tablet column"
                    id={null}
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="small"
                      textAlign={null}
                    >
                      <Header
                        as="h4"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h4
                          className="ui header"
                        >
                          Contact Information
                        </h4>
                      </Header>
                    </Heading>
                    <List
                      relaxed={true}
                      size="medium"
                    >
                      <div
                        className="ui medium relaxed list"
                        role="list"
                      >
                        <ListItem>
                          <div
                            className="item"
                            onClick={[Function]}
                            role="listitem"
                          >
                            <span>
                              Email: 
                            </span>
                            <span>
                              welovecats@lodgify.com
                            </span>
                          </div>
                        </ListItem>
                      </div>
                    </List>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</HostProfile>
`;

exports[`<HostProfile /> if \`props.languages\` is defined should render the right structure 1`] = `
<HostProfile
  avatarUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
  contactInformationHeadingText="Contact Information"
  description="We do love cats"
  email={null}
  emailLabel="Email"
  headingText="Your Host"
  languages={
    Array [
      "English",
      "Italian",
      "German",
      "Spanish",
    ]
  }
  languagesLabel="Languages"
  name="Mitjons & Kira"
  phone={null}
  phoneLabel="Phone"
>
  <Grid
    areColumnsCentered={false}
    isStackable={false}
    textAlign="left"
  >
    <Grid
      centered={false}
      stackable={false}
      textAlign="left"
    >
      <div
        className="ui left aligned grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                id={null}
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  id={null}
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                    id={null}
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Your Host
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                id={null}
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  id={null}
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                    id={null}
                  >
                    <FlexContainer
                      alignContent={null}
                      alignItems="center"
                      className="avatar-container"
                      flexDirection={null}
                      flexWrap={null}
                      justifyContent={null}
                    >
                      <div
                        className="flex-container avatar-container"
                        style={
                          Object {
                            "alignContent": null,
                            "alignItems": "center",
                            "display": "flex",
                            "flexDirection": null,
                            "flexGrow": "1",
                            "flexWrap": null,
                            "height": "100%",
                            "justifyContent": null,
                          }
                        }
                      >
                        <Avatar
                          firstName="Mitjons"
                          image="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                          lastName="&"
                        >
                          <div
                            className="avatar"
                            data-testid="avatar"
                          >
                            <withLazyLoad(ResponsiveImage)
                              data-testid="avatar-image"
                              imageUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                              isCircular={true}
                              isLazyLoaded={true}
                            >
                              <LazyLoader
                                componentProps={
                                  Object {
                                    "data-testid": "avatar-image",
                                    "isCircular": true,
                                    "isLazyLoaded": true,
                                  }
                                }
                                lazyProps={
                                  Object {
                                    "imageUrl": "https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max",
                                    "srcSet": undefined,
                                  }
                                }
                              >
                                <div />
                                <ResponsiveImage
                                  data-testid="avatar-image"
                                  hasRoundedCorners={false}
                                  imageTitle="Image Title"
                                  imageUrl=""
                                  isAvatar={false}
                                  isCircular={true}
                                  isFluid={false}
                                  isLazyLoaded={true}
                                  label={null}
                                  sizes={null}
                                  srcSet={null}
                                  willFill={false}
                                >
                                  <figure
                                    alt="Image Title"
                                    className="responsive-image isCircular"
                                    data-testid="responsive-image"
                                    style={
                                      Object {
                                        "backgroundImage": "url(undefined)",
                                      }
                                    }
                                  >
                                    <Image
                                      as="img"
                                      avatar={false}
                                      circular={true}
                                      data-testid="responsive-image-img"
                                      fluid={false}
                                      onError={[Function]}
                                      onLoad={[Function]}
                                      rounded={false}
                                      sizes={null}
                                      src=""
                                      srcSet={null}
                                      title="Image Title"
                                      ui={true}
                                    >
                                      <img
                                        className="ui circular image"
                                        data-testid="responsive-image-img"
                                        onError={[Function]}
                                        onLoad={[Function]}
                                        sizes={null}
                                        src=""
                                        srcSet={null}
                                        title="Image Title"
                                      />
                                    </Image>
                                  </figure>
                                </ResponsiveImage>
                                <div />
                              </LazyLoader>
                            </withLazyLoad(ResponsiveImage)>
                          </div>
                        </Avatar>
                        <Heading
                          className={null}
                          hasMargin={true}
                          isColorInverted={false}
                          size="small"
                          textAlign={null}
                        >
                          <Header
                            as="h4"
                            className=""
                            inverted={false}
                            textAlign={null}
                          >
                            <h4
                              className="ui header"
                            >
                              Mitjons & Kira
                            </h4>
                          </Header>
                        </Heading>
                      </div>
                    </FlexContainer>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
          verticalAlign="top"
        >
          <GridRow
            textAlign="left"
            verticalAlign="top"
          >
            <div
              className="left aligned top aligned row"
            >
              <GridColumn
                computer={7}
                id={null}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={7}
                  id={null}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned seven wide computer twelve wide mobile twelve wide tablet column"
                    id={null}
                  >
                    <HTML
                      htmlString="We do love cats"
                    >
                      <div
                        className="html-container"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "We do love cats",
                          }
                        }
                      />
                    </HTML>
                  </div>
                </GridColumn>
              </GridColumn>
              <GridColumn
                computer={5}
                id={null}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={5}
                  id={null}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned five wide computer twelve wide mobile twelve wide tablet column"
                    id={null}
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="small"
                      textAlign={null}
                    >
                      <Header
                        as="h4"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h4
                          className="ui header"
                        >
                          Contact Information
                        </h4>
                      </Header>
                    </Heading>
                    <List
                      relaxed={true}
                      size="medium"
                    >
                      <div
                        className="ui medium relaxed list"
                        role="list"
                      >
                        <ListItem>
                          <div
                            className="item"
                            onClick={[Function]}
                            role="listitem"
                          >
                            <span>
                              Languages: 
                            </span>
                            <span>
                              English, Italian, German, Spanish
                            </span>
                          </div>
                        </ListItem>
                      </div>
                    </List>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</HostProfile>
`;

exports[`<HostProfile /> if \`props.phone\` is defined should render the right structure 1`] = `
<HostProfile
  avatarUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
  contactInformationHeadingText="Contact Information"
  description="We do love cats"
  email={null}
  emailLabel="Email"
  headingText="Your Host"
  languages={null}
  languagesLabel="Languages"
  name="Mitjons & Kira"
  phone="+34932206524"
  phoneLabel="Phone"
>
  <Grid
    areColumnsCentered={false}
    isStackable={false}
    textAlign="left"
  >
    <Grid
      centered={false}
      stackable={false}
      textAlign="left"
    >
      <div
        className="ui left aligned grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                id={null}
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  id={null}
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                    id={null}
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Your Host
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                id={null}
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  id={null}
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                    id={null}
                  >
                    <FlexContainer
                      alignContent={null}
                      alignItems="center"
                      className="avatar-container"
                      flexDirection={null}
                      flexWrap={null}
                      justifyContent={null}
                    >
                      <div
                        className="flex-container avatar-container"
                        style={
                          Object {
                            "alignContent": null,
                            "alignItems": "center",
                            "display": "flex",
                            "flexDirection": null,
                            "flexGrow": "1",
                            "flexWrap": null,
                            "height": "100%",
                            "justifyContent": null,
                          }
                        }
                      >
                        <Avatar
                          firstName="Mitjons"
                          image="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                          lastName="&"
                        >
                          <div
                            className="avatar"
                            data-testid="avatar"
                          >
                            <withLazyLoad(ResponsiveImage)
                              data-testid="avatar-image"
                              imageUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                              isCircular={true}
                              isLazyLoaded={true}
                            >
                              <LazyLoader
                                componentProps={
                                  Object {
                                    "data-testid": "avatar-image",
                                    "isCircular": true,
                                    "isLazyLoaded": true,
                                  }
                                }
                                lazyProps={
                                  Object {
                                    "imageUrl": "https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max",
                                    "srcSet": undefined,
                                  }
                                }
                              >
                                <div />
                                <ResponsiveImage
                                  data-testid="avatar-image"
                                  hasRoundedCorners={false}
                                  imageTitle="Image Title"
                                  imageUrl=""
                                  isAvatar={false}
                                  isCircular={true}
                                  isFluid={false}
                                  isLazyLoaded={true}
                                  label={null}
                                  sizes={null}
                                  srcSet={null}
                                  willFill={false}
                                >
                                  <figure
                                    alt="Image Title"
                                    className="responsive-image isCircular"
                                    data-testid="responsive-image"
                                    style={
                                      Object {
                                        "backgroundImage": "url(undefined)",
                                      }
                                    }
                                  >
                                    <Image
                                      as="img"
                                      avatar={false}
                                      circular={true}
                                      data-testid="responsive-image-img"
                                      fluid={false}
                                      onError={[Function]}
                                      onLoad={[Function]}
                                      rounded={false}
                                      sizes={null}
                                      src=""
                                      srcSet={null}
                                      title="Image Title"
                                      ui={true}
                                    >
                                      <img
                                        className="ui circular image"
                                        data-testid="responsive-image-img"
                                        onError={[Function]}
                                        onLoad={[Function]}
                                        sizes={null}
                                        src=""
                                        srcSet={null}
                                        title="Image Title"
                                      />
                                    </Image>
                                  </figure>
                                </ResponsiveImage>
                                <div />
                              </LazyLoader>
                            </withLazyLoad(ResponsiveImage)>
                          </div>
                        </Avatar>
                        <Heading
                          className={null}
                          hasMargin={true}
                          isColorInverted={false}
                          size="small"
                          textAlign={null}
                        >
                          <Header
                            as="h4"
                            className=""
                            inverted={false}
                            textAlign={null}
                          >
                            <h4
                              className="ui header"
                            >
                              Mitjons & Kira
                            </h4>
                          </Header>
                        </Heading>
                      </div>
                    </FlexContainer>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
          verticalAlign="top"
        >
          <GridRow
            textAlign="left"
            verticalAlign="top"
          >
            <div
              className="left aligned top aligned row"
            >
              <GridColumn
                computer={7}
                id={null}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={7}
                  id={null}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned seven wide computer twelve wide mobile twelve wide tablet column"
                    id={null}
                  >
                    <HTML
                      htmlString="We do love cats"
                    >
                      <div
                        className="html-container"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "We do love cats",
                          }
                        }
                      />
                    </HTML>
                  </div>
                </GridColumn>
              </GridColumn>
              <GridColumn
                computer={5}
                id={null}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={5}
                  id={null}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned five wide computer twelve wide mobile twelve wide tablet column"
                    id={null}
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="small"
                      textAlign={null}
                    >
                      <Header
                        as="h4"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h4
                          className="ui header"
                        >
                          Contact Information
                        </h4>
                      </Header>
                    </Heading>
                    <List
                      relaxed={true}
                      size="medium"
                    >
                      <div
                        className="ui medium relaxed list"
                        role="list"
                      >
                        <ListItem>
                          <div
                            className="item"
                            onClick={[Function]}
                            role="listitem"
                          >
                            <span>
                              Phone: 
                            </span>
                            <span>
                              <a
                                href="tel:+34932206524"
                              >
                                +34932206524
                              </a>
                            </span>
                          </div>
                        </ListItem>
                      </div>
                    </List>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</HostProfile>
`;

exports[`<HostProfile /> should render the right structure 1`] = `
<HostProfile
  avatarUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
  contactInformationHeadingText="Contact Information"
  description="We do love cats"
  email={null}
  emailLabel="Email"
  headingText="Your Host"
  languages={null}
  languagesLabel="Languages"
  name="Mitjons & Kira"
  phone={null}
  phoneLabel="Phone"
>
  <Grid
    areColumnsCentered={false}
    isStackable={false}
    textAlign="left"
  >
    <Grid
      centered={false}
      stackable={false}
      textAlign="left"
    >
      <div
        className="ui left aligned grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                id={null}
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  id={null}
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                    id={null}
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Your Host
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                id={null}
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  id={null}
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                    id={null}
                  >
                    <FlexContainer
                      alignContent={null}
                      alignItems="center"
                      className="avatar-container"
                      flexDirection={null}
                      flexWrap={null}
                      justifyContent={null}
                    >
                      <div
                        className="flex-container avatar-container"
                        style={
                          Object {
                            "alignContent": null,
                            "alignItems": "center",
                            "display": "flex",
                            "flexDirection": null,
                            "flexGrow": "1",
                            "flexWrap": null,
                            "height": "100%",
                            "justifyContent": null,
                          }
                        }
                      >
                        <Avatar
                          firstName="Mitjons"
                          image="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                          lastName="&"
                        >
                          <div
                            className="avatar"
                            data-testid="avatar"
                          >
                            <withLazyLoad(ResponsiveImage)
                              data-testid="avatar-image"
                              imageUrl="https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max"
                              isCircular={true}
                              isLazyLoaded={true}
                            >
                              <LazyLoader
                                componentProps={
                                  Object {
                                    "data-testid": "avatar-image",
                                    "isCircular": true,
                                    "isLazyLoaded": true,
                                  }
                                }
                                lazyProps={
                                  Object {
                                    "imageUrl": "https://si4.cdbcdn.com/oh/4efbc79e-34db-4447-b31a-24e77f33f4e9.jpg?w=1024&mode=max",
                                    "srcSet": undefined,
                                  }
                                }
                              >
                                <div />
                                <ResponsiveImage
                                  data-testid="avatar-image"
                                  hasRoundedCorners={false}
                                  imageTitle="Image Title"
                                  imageUrl=""
                                  isAvatar={false}
                                  isCircular={true}
                                  isFluid={false}
                                  isLazyLoaded={true}
                                  label={null}
                                  sizes={null}
                                  srcSet={null}
                                  willFill={false}
                                >
                                  <figure
                                    alt="Image Title"
                                    className="responsive-image isCircular"
                                    data-testid="responsive-image"
                                    style={
                                      Object {
                                        "backgroundImage": "url(undefined)",
                                      }
                                    }
                                  >
                                    <Image
                                      as="img"
                                      avatar={false}
                                      circular={true}
                                      data-testid="responsive-image-img"
                                      fluid={false}
                                      onError={[Function]}
                                      onLoad={[Function]}
                                      rounded={false}
                                      sizes={null}
                                      src=""
                                      srcSet={null}
                                      title="Image Title"
                                      ui={true}
                                    >
                                      <img
                                        className="ui circular image"
                                        data-testid="responsive-image-img"
                                        onError={[Function]}
                                        onLoad={[Function]}
                                        sizes={null}
                                        src=""
                                        srcSet={null}
                                        title="Image Title"
                                      />
                                    </Image>
                                  </figure>
                                </ResponsiveImage>
                                <div />
                              </LazyLoader>
                            </withLazyLoad(ResponsiveImage)>
                          </div>
                        </Avatar>
                        <Heading
                          className={null}
                          hasMargin={true}
                          isColorInverted={false}
                          size="small"
                          textAlign={null}
                        >
                          <Header
                            as="h4"
                            className=""
                            inverted={false}
                            textAlign={null}
                          >
                            <h4
                              className="ui header"
                            >
                              Mitjons & Kira
                            </h4>
                          </Header>
                        </Heading>
                      </div>
                    </FlexContainer>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
          verticalAlign="top"
        >
          <GridRow
            textAlign="left"
            verticalAlign="top"
          >
            <div
              className="left aligned top aligned row"
            >
              <GridColumn
                computer={7}
                id={null}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={7}
                  id={null}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned seven wide computer twelve wide mobile twelve wide tablet column"
                    id={null}
                  >
                    <HTML
                      htmlString="We do love cats"
                    >
                      <div
                        className="html-container"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "We do love cats",
                          }
                        }
                      />
                    </HTML>
                  </div>
                </GridColumn>
              </GridColumn>
              <GridColumn
                computer={5}
                id={null}
                mobile={12}
                tablet={12}
                verticalAlignContent="top"
                width={null}
              >
                <GridColumn
                  computer={5}
                  id={null}
                  mobile={12}
                  tablet={12}
                  verticalAlign="top"
                  width={null}
                >
                  <div
                    className="top aligned five wide computer twelve wide mobile twelve wide tablet column"
                    id={null}
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="small"
                      textAlign={null}
                    >
                      <Header
                        as="h4"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h4
                          className="ui header"
                        >
                          Contact Information
                        </h4>
                      </Header>
                    </Heading>
                    <List
                      relaxed={true}
                      size="medium"
                    >
                      <div
                        className="ui medium relaxed list"
                        role="list"
                      />
                    </List>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</HostProfile>
`;
